<resources>
    <string name="app_name">TheReceiptBook</string>
    <string name="register_label">Create An Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="company">Company</string>
    <string name="sign_in">Sign In</string>
    <string name="user_image">user image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="records">Records</string>
    <string name="sales">Sales</string>
    <string name="help">Help</string>
    <string name="give_us_feedback">Give us feedback</string>
    <string name="about">About</string>
    <string name="support">Support</string>
    <string name="nav_open_drawer">open</string>
    <string name="nav_close_drawer">close</string>
    <string name="time">hh:mm:ss</string>
    <string name="logout">logout</string>
    <string name="settings">Settings</string>
    <string name="dummy_text">Name Surname Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</string>
    <string name="create_account">Create An Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="profile_image">Profile</string>
    <string name="already_registered">Not registered ?</string>
    <string name="receipt_books">Receipt Book</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone_number">Customer Phone NUmber</string>
    <string name="purchased_items">Purchased Items</string>
    <string name="amount_ghs">Amount GHS</string>
    <string name="issue">Issue</string>
    <string name="receipt_issued_by">Receipt issued by</string>
    <string name="profile">Profiles</string>
    <string name="save">Save</string>
    <string name="phone_number_edit">Phone</string>
    <string name="edit">Edit</string>
    <string name="knowhouse">KNOWHOUSE</string>
</resources>
