<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="#ECECEC">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_account"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="15dp"
        android:inputType="text"
        android:hint="@string/full_name"
        android:maxLength="30"
        android:background="@drawable/rounded_edittext"
        />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/company_name"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:inputType="text"
        android:padding="15dp"
        android:hint="@string/company"
        android:maxLength="30"
        android:background="@drawable/rounded_edittext"/>

    <android.support.design.widget.TextInputEditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="15dp"
        android:inputType="phone"
        android:hint="@string/phone_number"
        android:maxLength="20"
        android:background="@drawable/rounded_edittext"/>


    <android.support.design.widget.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:maxLength="30"
        android:background="@drawable/rounded_edittext" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        android:maxLength="30"
        android:background="@drawable/rounded_edittext" />



    <android.widget.Button
        android:id="@+id/sign_up_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:maxLength="30"
        android:textAppearance="?android:attr/textAppearanceMedium"/>


</LinearLayout>