<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:id="@+id/card_view"
    card_view:contentPadding="2dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="6dp"
    card_view:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/issue_registry">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/profile_image"
                android:src="@drawable/people"
                android:layout_margin="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/user_full_name"
                android:layout_toEndOf="@id/profile_image"
                android:text="@string/full_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                />

            <TextView
                android:id="@+id/user_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/profile_image"
                android:layout_below="@id/user_full_name"
                android:text="@string/phone_number"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/user_phone_number"
                android:id="@+id/time_of_issue"
                android:layout_below="@id/user_full_name"
                android:layout_marginStart="5dp"
                android:text="@string/time"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/message"
            android:layout_below="@id/issue_registry">

            <ImageView
                android:id="@+id/customer_image"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_margin="10dp"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/customer_image"
                android:layout_alignTop="@id/customer_image"
                android:text="@string/dummy_text"/>

        </RelativeLayout>


    </RelativeLayout>



</android.support.v7.widget.CardView>