<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity"
    android:background="@color/splashcolor">

    <include android:id="@+id/toolbarNav"
        layout="@layout/applicationtoolbar"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageSetup"
        android:layout_below="@id/toolbarNav"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/user_image"
        android:src="@drawable/people"/>

    <GridLayout
        android:id="@+id/user_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_below="@id/profileImageSetup"
        android:layout_marginTop="16dp">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/full_name_edittext"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"
            android:padding="10dp"
            android:enabled="false"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/user_phone_number_edittext"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="phone"
            android:maxLength="20"
            android:padding="10dp"
            android:enabled="false"/>

        <android.support.design.widget.TextInputEditText
            android:id="@+id/company_name_edittext"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="2"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_edittext"
            android:inputType="text"
            android:padding="10dp"
            android:enabled="false"/>
    </GridLayout>


    <LinearLayout
        android:id="@+id/profile_buttons"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/edit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_marginEnd="10dp"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"/>

    </LinearLayout>

</RelativeLayout>